Commit fix 5 lỗi

--- a/Project/views/addpart.ejs
+++ b/Project/views/addpart.ejs
@@ -190,7 +190,7 @@ Nhập vào đáp án
                           <label class="control-label col-md-3 col-sm-3 col-xs-12" > Explanation<span class="required">*</span>
                           </label>
                           <div class="col-md-6 col-sm-6 col-xs-12">
-                            <textarea id="content" class="form-control col-md-7 col-xs-12" rows="10" name="explanation"  type="text"> </textarea>
+                            <textarea id="content" class="form-control col-md-7 col-xs-12" rows="3" name="explanation"  type="text"> </textarea>
                           </div>
                         </div>
                         <div class="ln_solid"></div>
@@ -257,7 +257,7 @@ Nhập danh sách các lựa chọn, tách nhau bởi dấu xuống dòng
                             <label class="control-label col-md-3 col-sm-3 col-xs-12" > Explanation<span class="required">*</span>
                             </label>
                             <div class="col-md-6 col-sm-6 col-xs-12">
-                              <textarea id="content" class="form-control col-md-7 col-xs-12" rows="10" name="explanation"  type="text"> </textarea>
+                              <textarea id="content" class="form-control col-md-7 col-xs-12" rows="3" name="explanation"  type="text"> </textarea>
                             </div>
                           </div>
                           <div class="ln_solid"></div>
@@ -277,10 +277,10 @@ Nhập danh sách các lựa chọn, tách nhau bởi dấu xuống dòng
                               <label class="control-label col-md-3 col-sm-3 col-xs-12" > Name <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
-                                <input id="content" class="form-control col-md-7 col-xs-12" rows="10" name="name"  type="text"/> 
+                                <input id="content" class="form-control col-md-7 col-xs-12"  name="name"  type="text"/> 
                               </div>
                             </div>
-                            <input id="" class="form-control col-md-7 col-xs-12" rows="10" name="type" style="display: none" type="text" value="CB" />
+                            <input id="" class="form-control col-md-7 col-xs-12" name="type" style="display: none" type="text" value="CB" />
                             <div class="item form-group">
                               <label class="control-label col-md-3 col-sm-3 col-xs-12" > Construction<span class="required">*</span>
                               </label>
@@ -297,7 +297,7 @@ Nhập vào danh sách các lựa chọn, tách nhau bởi dấu xuống dòng
                                 <label class="control-label col-md-3 col-sm-3 col-xs-12" > Question<span class="required">*</span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                  <textarea id="content" class="form-control col-md-7 col-xs-12" rows="10" name="question"  type="text"> </textarea>
+                                  <textarea id="content" class="form-control col-md-7 col-xs-12" rows="3" name="question"  type="text"> </textarea>
                                 </div>
                             </div>
                             <div class="item form-group">
@@ -324,7 +324,7 @@ Nhập vào danh sách các lựa chọn, tách nhau bởi dấu xuống dòng
                               <label class="control-label col-md-3 col-sm-3 col-xs-12" > Explanation<span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
-                                <textarea id="content" class="form-control col-md-7 col-xs-12" rows="10" name="explanation"  type="text"> </textarea>
+                                <textarea id="content" class="form-control col-md-7 col-xs-12" rows="3" name="explanation"  type="text"> </textarea>
                               </div>
                             </div>
                             <div class="ln_solid"></div>
@@ -370,7 +370,7 @@ Ví dụ: che từ "you" trong câu "I love you": i love [you]
                                 <label class="control-label col-md-3 col-sm-3 col-xs-12" > Explanation<span class="required">*</span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                  <textarea id="content" class="form-control col-md-7 col-xs-12" rows="10" name="explanation"  type="text"> </textarea>
+                                  <textarea id="content" class="form-control col-md-7 col-xs-12" rows="3" name="explanation"  type="text"> </textarea>
                                 </div>
                               </div>
                               <div class="ln_solid"></div>
