--- a/Project/views/capnhatthongtinthanhvien.ejs
+++ b/Project/views/capnhatthongtinthanhvien.ejs
@@ -68,10 +68,10 @@
                     <div class="col-md-6 col-sm-6 col-xs-12" required="required">
                       <div id="is_superuser" class="btn-group" data-toggle="buttons">
                         <label class="btn btn-default" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                          <input type="radio" name="is_superuser" value="yes"> &nbsp; Có &nbsp;
+                          <input type="radio" name="is_admin" value="yes"> &nbsp; Có &nbsp;
                         </label>
                         <label class="btn btn-default" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                          <input type="radio" name="is_superuser" value="no"> Không
+                          <input type="radio" name="is_admin" value="no"> Không
                         </label>
                       </div>
                     </div>
