--- a/Project/views/quanlytuvung.ejs
+++ b/Project/views/quanlytuvung.ejs
@@ -9,7 +9,7 @@
               <h3> Danh sách từ vựng - <%=list_vocab.length%> </h3>
             </div>
       
-            <div class="title_right">
+            <!-- <div class="title_right">
               <div class="col-md-9 col-sm-12 col-xs-12 form-group pull-center top_search">
                 <div class="input-group">
                   <input type="text" class="form-control" placeholder="Search for...">
@@ -18,7 +18,7 @@
                   </span>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
       
           <div class="clearfix"></div>
