--- a/Project/views/template/main_top_navigation.ejs
+++ b/Project/views/template/main_top_navigation.ejs
@@ -78,7 +78,7 @@
             <a data-toggle="tooltip" data-placement="top" title="Lock">
               <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
             </a>
-            <a data-toggle="tooltip" data-placement="top" title="Logout" href="logout">
+            <a data-toggle="tooltip" data-placement="top" title="Logout" href="/logout">
               <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
             </a>
           </div>
@@ -110,7 +110,7 @@
                     </a>
                   </li>
                   <li><a href="javascript:;">Help</a></li>
-                  <li><a href="logout"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                  <li><a href="/logout"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                 </ul>
               </li>
 
