--- a/Project/views/diemdanh.ejs
+++ b/Project/views/diemdanh.ejs
@@ -31,7 +31,6 @@
                     <%})%> 
                   </tbody>
                 </table>
-
                   <button type="submit" class="btn btn-primary">Submit</button>
               </form>
               
@@ -39,6 +38,9 @@
             </div>
           </div>
       </div>
+      </div>
+      </div>
+      
       <!-- /page content -->
 
       <!-- footer content -->
