--- a/Project/views/diemdanh.ejs
+++ b/Project/views/diemdanh.ejs
@@ -24,8 +24,8 @@
                     <tr>
                       <td>                       
                         <label for=""><%= vocab.word %></label>
-                        <input id="name" class="form-control col-md-7 col-xs-12" data-validate-length-range="1,70"
-                        data-validate-words="1" name="word" required="required" type="text"> 
+                        <input id="name" class="form-control col-md-7 col-xs-12" data-validate-length-range="1,200"
+                          data-validate-words="1,10" name="meaning" required="required" type="text">
                       </td>
                     </tr>
                     <%})%> 
