--- a/Project/views/kiemtratongthe.ejs
+++ b/Project/views/kiemtratongthe.ejs
@@ -1,31 +1,42 @@
 <% include ./template/main_header %>
 <% include ./template/main_top_navigation %>
-            <!-- /top navigation -->
+<!-- /top navigation -->
 
-            <!-- page content -->
-            <div class="right_col" role="main">
-                <!-- top tiles -->
-                <div class="row tile_count">
+<!-- page content -->
+<div class="right_col" role="main">
+    <!-- top tiles -->
+    <div class="row tile_count">
 
-                </div>
-                <!-- /top tiles -->
+    </div>
+    <!-- /top tiles -->
 
-                <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12" style="color:red; text-align:center">
-                        <h3>Kiểm tra tổng thể
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12" style="color:red; text-align:center">
+            <h3>Kiểm tra tổng thể
 
-                        </h3>
-                    </div>
+            </h3>
+        </div>
 
-                </div>
-                <br />
+    </div>
+    <br />
+   
+
+    <h1>De 1</h1>
+    <a href="/kiemtratongthe/1?action=listening">Nghe</a>
+    <a href="/kiemtratongthe/1?action=speaking">Noi</a>
+    <a href="/kiemtratongthe/1?action=reading">Doc</a>
+    <a href="/kiemtratongthe/1?action=writting">Viet</a>
+   
+  
+    <script src="../vendors/jquery/dist/jquery.min.js"></script>
+<script>
+    
+
+</script>
 
 
+</div>
+<!-- /page content -->
 
-
-
-            </div>
-            <!-- /page content -->
-
-            <!-- footer content -->
+<!-- footer content -->
 <% include ./template/main_footer %>
