--- a/Project/views/kiemtratongthelistening.ejs
+++ b/Project/views/kiemtratongthelistening.ejs
@@ -2,6 +2,27 @@
 <% include ./template/main_top_navigation %>
 <!-- /top navigation -->
 
+<style>
+    #time{
+        text-align: center;
+    }
+    .clock{
+        font-size: 2em;
+        margin-bottom: 0.4em;
+    }
+    #start{
+        padding: 1em 2em;
+        color: black;
+        cursor: pointer;
+        font-size: 2em;
+        font-weight: bold;
+    }
+    .btn-submit{
+            margin-top: 1em;
+            height: 3em;
+            width: 6em;
+        }
+</style>
 <!-- page content -->
 <div class="right_col" role="main">
     <!-- top tiles -->
@@ -22,7 +43,12 @@
 
     <h1>Listening</h1>
 
-    <div id="time"><span id="min">30</span><span>:</span><span id="sec">00</span> <span id="start">Start</span></div>
+    <div id="time">
+        <div class="clock">
+            <span id="min">30</span><span>:</span><span id="sec">00</span> 
+        </div>
+        <span id="start">Start</span>
+    </div>
 
 
     <form id="form">
@@ -34,26 +60,39 @@
         <div class="col-xs-12 col-md-12">
                 <span class="col-xs-12 col-md-12">Cau <%= index+1 %></span>
             <img class="col-xs-6 col-md-6" src=<%= x.image_src %> <br>
-            <span>Chon dap an dung</span>
-            <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red"> Sai</span>
-            <input type="radio" name=<%= x.id_cauhoi %> value="0" /><span>A</span>
+            <span>choose the correct answer!</span>
+            <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red">incorrect</span>
+        <div>
+            <input type="radio" name=<%= x.id_cauhoi %> value="0" /><span>A</span></div>
+            <div>
             <input type="radio" name=<%= x.id_cauhoi %> value="1" /> <span>B</span>
-            <input type="radio" name=<%= x.id_cauhoi %> value="2" /><span>C</span>
-            <input type="radio" name=<%= x.id_cauhoi %>value="3" /><span>D</span>
-
         </div>
+        <div>  
+            <input type="radio" name=<%= x.id_cauhoi %> value="2" /><span>C</span>
+        </div>  
+        <div>
+            <input type="radio" name=<%= x.id_cauhoi %>value="3" /><span>D</span>
+        </div>
+    </div>
 
         <%}) %>
         <h2>Part2</h2>
         <% part2.data.map((x,index)=>{ %>
         <div class="col-xs-12 col-md-12">
             <span class="col-xs-12 col-md-12">Cau <%= 10+index+1 %></span>
-            <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red"> Sai</span>
+            <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red">incorrect</span>
+            <div>
             <input type="radio" name=<%= x.id_cauhoi %> value="0" /><span>A</span>
+        </div>
+            <div>
             <input type="radio" name=<%= x.id_cauhoi %> value="1" /> <span>B</span>
+        </div>
+            <div>
             <input type="radio" name=<%= x.id_cauhoi %> value="2" /><span>C</span>
+        </div>
+            <div>
             <input type="radio" name=<%= x.id_cauhoi %> value="3" /><span>D</span>
-
+        </div>
         </div>
 
         <% }) %>
@@ -62,11 +101,19 @@
         <div class="col-xs-12 col-md-12">
             <span class="col-xs-12 col-md-12">Cau <%= 20+index+1 %></span>
             <span><%= x.description.question %></span>
-            <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red"> Sai</span>
-            <input type="radio" name=<%= x.id_cauhoi %> value="0" /><span><%= x.description.A %></span>
-            <input type="radio" name=<%= x.id_cauhoi %> value="1" /><span><%= x.description.B %></span>
-            <input type="radio" name=<%= x.id_cauhoi %> value="2" /><span><%= x.description.C %></span>
-            <input type="radio" name=<%= x.id_cauhoi %> value="3" /><span><%= x.description.D %></span>
+            <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red">incorrect</span>
+            <div>
+                <input type="radio" name=<%= x.id_cauhoi %> value="0" /><span><%= x.description.A %></span>
+            </div>
+            <div>
+                <input type="radio" name=<%= x.id_cauhoi %> value="1" /><span><%= x.description.B %></span>
+            </div>
+            <div>
+                <input type="radio" name=<%= x.id_cauhoi %> value="2" /><span><%= x.description.C %></span>
+            </div>
+            <div>
+                <input type="radio" name=<%= x.id_cauhoi %> value="3" /><span><%= x.description.D %></span>
+            </div>
         </div>
         <%}) %>
         <h2>Part4</h2>
@@ -74,16 +121,28 @@
         <div class="col-xs-12 col-md-12">
             <span class="col-xs-12 col-md-12">Cau <%= 30+index+1 %></span>
             <span><%= x.description.question %></span>
-            <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red"> Sai</span>
-            <input alt="0" type="radio" name=<%= x.id_cauhoi %> value="0" /><span><%= x.description.A %></span>
-            <input alt="1" type="radio" name=<%= x.id_cauhoi %> value="1" /><span><%= x.description.B %></span>
-            <input alt="2" type="radio" name=<%= x.id_cauhoi %> value="2" /><span><%= x.description.C %></span>
-            <input alt="3" type="radio" name=<%= x.id_cauhoi %> value="3" /><span><%= x.description.D %></span>
+            <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red"> incorrect</span>
+            <div>
+                <input alt="0" type="radio" name=<%= x.id_cauhoi %> value="0" /><span><%= x.description.A %></span>
+            </div>
+            <div>
+                <input alt="1" type="radio" name=<%= x.id_cauhoi %> value="1" /><span><%= x.description.B %></span>
+            </div>
+            <div>
+                <input alt="2" type="radio" name=<%= x.id_cauhoi %> value="2" /><span><%= x.description.C %></span>
+            </div>
+            <div>
+                <input alt="3" type="radio" name=<%= x.id_cauhoi %> value="3" /><span><%= x.description.D %></span>
         </div>
+    </div>
         <%}) %>
       
          <span id="result"></span>
-    <h1 id="Submit">Nop bai</h1>
+         <div class="col-xs-12 col-md-12">
+                <div class="col-xs-12 col-md-12">
+                    <input class="btn-submit" id="Submit" type="submit" value="Submit"/>
+                </div>
+            </div>
 </form>
   
     <script src="../vendors/jquery/dist/jquery.min.js"></script>
@@ -95,6 +154,7 @@
     $('#Submit').click(() => {
         Submit()
     })
+    // xử lý start
     $('#start').click(() => {
         document.getElementById('audio').play()
         $('#form').show()
@@ -134,7 +194,7 @@
             $('.message').show()
             re.map(x => {
                 console.log('#' + x)
-                $('.' + x).html("<span style='color:green'>Chinh xac</span>")
+                $('.' + x).html("<span style='color:green'>correct</span>")
             })
             $('#result').html("<span>" + re.length + "/40</span>")
         })
