--- a/Project/views/kiemtratongthereading.ejs
+++ b/Project/views/kiemtratongthereading.ejs
@@ -1,7 +1,27 @@
 <% include ./template/main_header %>
 <% include ./template/main_top_navigation %>
 <!-- /top navigation -->
-
+<style>
+        #time{
+            text-align: center;
+        }
+        .clock{
+            font-size: 2em;
+            margin-bottom: 0.4em;
+        }
+        #start{
+            padding: 1em 2em;
+            color: black;
+            cursor: pointer;
+            font-size: 2em;
+            font-weight: bold;
+        }
+        .btn-submit{
+            margin-top: 1em;
+            height: 3em;
+            width: 6em;
+        }
+    </style>
 <!-- page content -->
 <div class="right_col" role="main">
     <!-- top tiles -->
@@ -22,7 +42,12 @@
 
     <h1>Reading</h1>
 
-    <div id="time"><span id="min">60</span><span>:</span><span id="sec">00</span> <span id="start">Start</span></div>
+    <div id="time">
+        <div class="clock">
+            <span id="min">60</span><span>:</span><span id="sec">00</span> 
+        </div>
+        <span id="start">Start</span>
+    </div>
 
 
     <form id="form">
@@ -32,12 +57,19 @@
         <div class="col-xs-12 col-md-12">
                 <span class="col-xs-12 col-md-12">Cau <%= 40+index+1 %></span>
             <span class="col-xs-12 col-md-12"><%= x.description.question%></span>
-            <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red"> Sai</span>
+            <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red"> incorrect</span>
+            <div>
             <input type="radio" name=<%= x.id_cauhoi %> value="0" /><span>A<%=x.description.A%></span>
+        </div>
+            <div>
             <input type="radio" name=<%= x.id_cauhoi %> value="1" /> <span>B<%=x.description.B%></span>
+        </div>
+            <div>
             <input type="radio" name=<%= x.id_cauhoi %> value="2" /><span>C<%=x.description.C%></span>
+        </div>
+        <div>
             <input type="radio" name=<%= x.id_cauhoi %> value="3" /><span>D<%=x.description.D%></span>
-
+        </div>
         </div>
 
         <%}) %>
@@ -49,12 +81,19 @@
             <div class="col-xs-12 col-md-12">
                     <span class="col-xs-12 col-md-12">Cau <%= 53+index+1 %></span>
                 <span class="col-xs-12 col-md-12"><%= x.description.question%></span>
-                <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red"> Sai</span>
+                <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red"> incorrect</span>
+               <div>
                 <input type="radio" name=<%= x.id_cauhoi %> value="0" /><span>A<%=x.description.A%></span>
+            </div>
+                <div>
                 <input type="radio" name=<%= x.id_cauhoi %> value="1" /> <span>B<%=x.description.B%></span>
+            </div>
+                <div>
                 <input type="radio" name=<%= x.id_cauhoi %> value="2" /><span>C<%=x.description.C%></span>
+            </div>
+                <div>
                 <input type="radio" name=<%= x.id_cauhoi %> value="3" /><span>D<%=x.description.D%></span>
-    
+            </div>
             </div>
     
             <%}) %>
@@ -68,18 +107,29 @@
             <div class="col-xs-12 col-md-12">
                     <span class="col-xs-12 col-md-12">Cau <%= 66+index+1 %></span>
                 <span class="col-xs-12 col-md-12"><%= x.description.question%></span>
-                <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red"> Sai</span>
+                <span class="message <%= x.id_cauhoi%> col-xs-12 col-md-12" style="color:red"> incorrect</span>
+                <div>
                 <input type="radio" name=<%= x.id_cauhoi %> value="0" /><span>A<%=x.description.A%></span>
+            </div>
+                <div>
                 <input type="radio" name=<%= x.id_cauhoi %> value="1" /> <span>B<%=x.description.B%></span>
+            </div>
+               <div>
                 <input type="radio" name=<%= x.id_cauhoi %> value="2" /><span>C<%=x.description.C%></span>
+            </div> 
+                <div>
                 <input type="radio" name=<%= x.id_cauhoi %> value="3" /><span>D<%=x.description.D%></span>
-    
+            </div>
             </div>
     
             <%}) %>
       
          <span id="result"></span>
-    <h1 id="Submit">Nop bai</h1>
+         <div class="col-xs-12 col-md-12">
+                <div class="col-xs-12 col-md-12">
+                    <input class="btn-submit" id="Submit" type="submit" value="Submit"/>
+                </div>
+            </div>
 </form>
   
     <script src="../vendors/jquery/dist/jquery.min.js"></script>
@@ -130,7 +180,7 @@
             $('.message').show()
             re.map(x => {
                 console.log('#' + x)
-                $('.' + x).html("<span style='color:green'>Chinh xac</span>")
+                $('.' + x).html("<span style='color:green'>correct</span>")
             })
             $('#result').html("<span>" + re.length + "/40</span>")
         })
